# lora-fine-tuning

./: .gitignore  Dockerfile  Makefile  README.md  lora_finetune.py  main.py  pyproject.toml  requirements.txt
config/: training_config.yaml
scripts/: adapter_info.py  evaluate_adapter.py
src/: data.py  inference.py  model_setup.py  train.py  utils.py
tests/: test_pipeline.py
