[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lora-fine-tuning"
version = "0.1.0"
description = "Parameter-efficient LLM fine-tuning using LoRA"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "pyyaml>=6.0",
    "sentencepiece>=0.1.99",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
